# hydrogen-emulator-1ts

./: .gitignore  README.md  convnext_config.yaml  example_config.yaml  install_micromamba.sh  pyproject.toml  reed_config.yaml  requirements.txt  setup.py  test_example.sh  train_convnext.sh  train_example.sh  train_reed.sh
emulator-1ts/: CONUS21_scalers_parflow_names.yaml  callbacks.py  dataset.py  experiment_tracking.py  logger.py  main.py  model.py  scalers.py  train.py  utils.py  visualization.py
test_domains/: ParFlow_WatershedRun_Shapefile.py  ReadMe.md  dist_forc.py  make_subset_domain_CONUS2.1.ipynb  run_watereshed.sh  setup_watershed_run_CONUS2.1.ipynb
