[project]
name = "hydrogen-emulator-1ts"
version = "0.1.0"
description = "One-timestep ResNet emulator for hydrologic modeling"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "numpy",
    "pandas", 
    "torch",
    "torchvision",
    "xarray",
    "dask[diagnostics]",
    "bottleneck",
    "xbatcher",
    "tensorboard",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emulator-1ts"]
